--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,19 @@
 [tool.poetry]
-name = "repl_python3_Webscrape-Python"
+name = "repl_python3_BU-Discord-Bot"
 version = "0.1.0"
 description = ""
-authors = ["Your Name <you@example.com>"]
+authors = ["3818919 <<>>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+pandas = "^1.4.3"
 requests-html = "^0.10.0"
-bs4 = "^0.0.1"
-urllib3 = "^1.26.6"
-pandas = "^1.2.5"
-Flask = "^2.0.1"
-replit = "^3.1.0"
-aiohttp = "^3.7.4"
 urlopen = "^1.0.0"
-nextcord = "^2.0.0-alpha.2"
+nextcord = "^2.0.0"
+urllib3 = "^1.26.11"
 
 [tool.poetry.dev-dependencies]
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
